задача про битву воинов

--- a/python_def_ and_object_oriented_programming.ipynb
+++ b/python_def_ and_object_oriented_programming.ipynb
@@ -544,20 +544,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "class count_nats:\n",
-    "    nats = 5                              # nats - атрибут и свойство (поле) класса count_nats\n",
-    "    def shoping_bag(price):               # shoping_bag - атрибут и метод класса count_nats\n",
+    "    nats = 5  # nats - атрибут и свойство (поле) класса count_nats\n",
+    "\n",
+    "    def shoping_bag(price):  # shoping_bag - атрибут и метод класса count_nats\n",
     "        invoice = price * count_nats.nats\n",
     "        return invoice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +567,7 @@
        "40"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,8 +615,8 @@
    ],
    "source": [
     "# Создание объекта (экземпляра) на основе класса\n",
-    "dinner=count_nats()\n",
-    "dinner.nats        # объект с телом класса не поддерживает метод класса без ссылки self"
+    "dinner = count_nats()\n",
+    "dinner.nats  # объект с телом класса не поддерживает метод класса без ссылки self"
    ]
   },
   {
@@ -635,7 +636,7 @@
     }
    ],
    "source": [
-    "dinner.nats=200\n",
+    "dinner.nats = 200\n",
     "dinner.nats"
    ]
   },
@@ -676,8 +677,10 @@
    "outputs": [],
    "source": [
     "class count_nats:\n",
-    "    nats = 5                              # nats - атрибут и свойство (поле) класса count_nats\n",
-    "    def shoping_bag(self,price):          # shoping_bag - атрибут и метод класса count_nats \n",
+    "    nats = 5  # nats - атрибут и свойство (поле) класса count_nats\n",
+    "\n",
+    "    def shoping_bag(self,\n",
+    "                    price):  # shoping_bag - атрибут и метод класса count_nats\n",
     "        invoice = price * self.nats\n",
     "        return invoice"
    ]
@@ -688,7 +691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dinner=count_nats()"
+    "dinner = count_nats()"
    ]
   },
   {
@@ -708,7 +711,7 @@
     }
    ],
    "source": [
-    "dinner.shoping_bag(100) # объект наследует поле nats от класса"
+    "dinner.shoping_bag(100)  # объект наследует поле nats от класса"
    ]
   },
   {
@@ -728,7 +731,7 @@
     }
    ],
    "source": [
-    "dinner.nats=100         #объект завел собственное поле\n",
+    "dinner.nats = 100  #объект завел собственное поле\n",
     "dinner.shoping_bag(9)"
    ]
   },
@@ -738,7 +741,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dinner.tommorow=\"porridge\"  #добавление нового поля к объекту (not good)"
+    "dinner.tommorow = \"porridge\"  #добавление нового поля к объекту (not good)"
    ]
   },
   {
@@ -758,7 +761,239 @@
     }
    ],
    "source": [
-    "dinner.tommorow  "
+    "dinner.tommorow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Атрибут __dict__ используется для просмотра всех текущих свойств объекта.\n",
+    "class library():\n",
+    "    n = 6\n",
+    "\n",
+    "    def found_book(self, b):\n",
+    "        return b + self.n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book = library()\n",
+    "book.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 8}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book.n = 8  #свойства экземпляра обычно не назначаются за пределами класса\n",
+    "book.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book.m = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 8, 'm': 100}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book.__dict__[\"s\"] = 123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n': 8, 'm': 100, 's': 123}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book.__dict__"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Есть класс \"Воин\". От него создаются два экземпляра-юнита. Каждому устанавливается здоровье в 100 очков. \n",
+    "В случайном порядке они бьют друг друга. \n",
+    "Тот, кто бьет, здоровья не теряет. \n",
+    "У того, кого бьют, оно уменьшается на 20 очков от одного удара. После каждого удара надо выводить сообщение, какой юнит атаковал, и сколько у противника осталось здоровья. Как только у кого-то заканчивается ресурс здоровья, программа завершается сообщением о том, кто одержал победу."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "pass - заглушка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "import random\n",
+    "\n",
+    "class Warrior():\n",
+    "    def __init__(self):\n",
+    "        self.health = 100\n",
+    "#         self.name = f\"Warrior_{uuid.uuid4()}\"\n",
+    "\n",
+    "    def fight(self, another_warrior):\n",
+    "        another_warrior.health -= 20\n",
+    "#         print(f\"{self.name} is fighting with {another_warrior.name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_warrior = Warrior()\n",
+    "second_warrior = Warrior()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "________\n",
+      "Second warrior attack\n",
+      "Second warrior health: 100\n",
+      "First warrior health: 80\n",
+      "________\n",
+      "First warrior attack\n",
+      "Second warrior health: 80\n",
+      "First warrior health: 80\n",
+      "________\n",
+      "First warrior attack\n",
+      "Second warrior health: 60\n",
+      "First warrior health: 80\n",
+      "________\n",
+      "Second warrior attack\n",
+      "Second warrior health: 60\n",
+      "First warrior health: 60\n",
+      "________\n",
+      "Second warrior attack\n",
+      "Second warrior health: 60\n",
+      "First warrior health: 40\n",
+      "________\n",
+      "First warrior attack\n",
+      "Second warrior health: 40\n",
+      "First warrior health: 40\n",
+      "________\n",
+      "First warrior attack\n",
+      "Second warrior health: 20\n",
+      "First warrior health: 40\n",
+      "________\n",
+      "Second warrior attack\n",
+      "Second warrior health: 20\n",
+      "First warrior health: 20\n",
+      "________\n",
+      "Second warrior attack\n",
+      "Second warrior health: 20\n",
+      "First warrior health: 0\n",
+      "========\n",
+      "Won second_warrior\n"
+     ]
+    }
+   ],
+   "source": [
+    "while second_warrior.health > 0 and first_warrior.health > 0:\n",
+    "    if (random.random() > 0.5):\n",
+    "        first_warrior.fight(second_warrior)\n",
+    "        print(\"________\")\n",
+    "        print(f\"First warrior attack\")\n",
+    "    else:\n",
+    "        second_warrior.fight(first_warrior)\n",
+    "        print(\"________\")\n",
+    "        print(f\"Second warrior attack\")\n",
+    "\n",
+    "    print(f\"Second warrior health: {second_warrior.health}\")\n",
+    "    print(f\"First warrior health: {first_warrior.health}\")\n",
+    "\n",
+    "    if second_warrior.health == 0:\n",
+    "        print(\"========\")\n",
+    "        print(f\"Won first_warrior\")\n",
+    "    elif first_warrior.health == 0:\n",
+    "        print(\"========\")\n",
+    "        print(f\"Won second_warrior\")"
    ]
   },
   {
