--- a/playgendary/Playgendary_task.ipynb
+++ b/playgendary/Playgendary_task.ipynb
@@ -26,6 +26,7 @@
     "from scipy.stats import spearmanr  #корреляция Спирмена\n",
     "\n",
     "import seaborn as sns\n",
+    "\n",
     "sns.set()\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -108,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "9f7dbc69",
+   "id": "e99b698d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T21:09:41.155748Z",
@@ -161,7 +162,8 @@
    ],
    "source": [
     "# количество уникальных игроков за месяц\n",
-    "total_users = pd.read_sql(\"\"\"select count(distinct user_id) uniq_user_id from test.events_data\"\"\",\n",
+    "total_users = pd.read_sql(\n",
+    "    \"\"\"select count(distinct user_id) uniq_user_id from test.events_data\"\"\",\n",
     "    conn)\n",
     "total_users"
    ]
@@ -169,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b65aefe3",
+   "id": "8a0d2cbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,8 +196,7 @@
     "    \"\"\"select date(data_event), count(distinct user_id) DAU from \n",
     "    (select *, to_timestamp(floor(event_timestamp/1000000)) data_event , max (event_id) meid \n",
     "    from test.events_data group by 1,2,3,4) uniqid \n",
-    "    group by 1\"\"\",\n",
-    "    conn)"
+    "    group by 1\"\"\", conn)"
    ]
   },
   {
@@ -252,12 +253,11 @@
     "plt.ylabel('Дата')\n",
     "plt.title('Ежедневное количество уникальных пользователей')\n",
     "\n",
-    "\n",
     "x = uniq_users_everyday.date\n",
     "y = uniq_users_everyday.dau\n",
     "sns.lineplot(x=x, y=y, data=uniq_users_everyday, color='red')\n",
     "\n",
-    "plt.xticks(rotation=90);"
+    "plt.xticks(rotation=90)"
    ]
   },
   {
@@ -272,15 +272,15 @@
    },
    "outputs": [],
    "source": [
-    "#  В таблице parameters_data сведены в param_value все значения из 4х столбцов \n",
+    "#  В таблице parameters_data сведены в param_value все значения из 4х столбцов\n",
     "# (param_value_int, param_value_float, param_value_double, param_value_string),\n",
     "# unixtimestamp приведен к виду дата\n",
-    "# из parameters_data выбраны event_id по product_id \n",
+    "# из parameters_data выбраны event_id по product_id\n",
     "# для катерогий покупок (purchase_first, purchase_second, purchase_third) назначено количество покупок = 1\n",
     "# в currency_type тип валюты coins не был найден в product_id, поэтому параметр не включен\n",
     "\n",
     "metrics_per_day = pd.read_sql(\n",
-    "        \"\"\"with collection as (\n",
+    "    \"\"\"with collection as (\n",
     "        select event_id, \n",
     "               param_key, \n",
     "               param_value\n",
@@ -330,8 +330,7 @@
     "           from test.events_data group by 1,2,3,4) m group by 1) total_count\n",
     "        on total_count.data_event = s.data_event\n",
     "group by s.data_event, total_count.dau\n",
-    "    \"\"\",\n",
-    "    conn)"
+    "    \"\"\", conn)"
    ]
   },
   {
@@ -495,12 +494,11 @@
     "plt.ylabel('Дата')\n",
     "plt.title('(Average Revenue Per User)- средний доход с пользователя в день')\n",
     "\n",
-    "\n",
     "x = metrics_per_day.data_event\n",
     "y = metrics_per_day.arpu\n",
     "sns.lineplot(x=x, y=y, data=metrics_per_day, color='black')\n",
     "\n",
-    "plt.xticks(rotation=90);"
+    "plt.xticks(rotation=90)"
    ]
   },
   {
@@ -529,14 +527,15 @@
     "# ARPPU (Average Revenue Per Paying User)- доход с одного платящего пользователя\n",
     "plt.xlabel('ARPPU')\n",
     "plt.ylabel('Дата')\n",
-    "plt.title('(Average Revenue Per Paying User)- доход с одного платящего пользователя в день')\n",
-    "\n",
+    "plt.title(\n",
+    "    '(Average Revenue Per Paying User)- доход с одного платящего пользователя в день'\n",
+    ")\n",
     "\n",
     "x = metrics_per_day.data_event\n",
     "y = metrics_per_day.arppu\n",
     "sns.lineplot(x=x, y=y, data=metrics_per_day, color='blue')\n",
     "\n",
-    "plt.xticks(rotation=90);"
+    "plt.xticks(rotation=90)"
    ]
   },
   {
@@ -565,19 +564,19 @@
     "# Conversion -Конверсия (какая доля посетителей сайта совершила покупку)\n",
     "plt.xlabel('ARPPU')\n",
     "plt.ylabel('Дата')\n",
-    "plt.title('Conversion -Конверсия (какая доля посетителей сайта совершила покупку)')\n",
-    "\n",
+    "plt.title(\n",
+    "    'Conversion -Конверсия (какая доля посетителей сайта совершила покупку)')\n",
     "\n",
     "x = metrics_per_day.data_event\n",
     "y = metrics_per_day.conversion_rate\n",
     "sns.lineplot(x=x, y=y, data=metrics_per_day, color='green')\n",
     "\n",
-    "plt.xticks(rotation=90);"
+    "plt.xticks(rotation=90)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2b41e13c",
+   "id": "2bce4b65",
    "metadata": {},
    "source": [
     "### Рейтинг оружия"
@@ -636,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0bae53a5",
+   "id": "5dd516a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:28:58.002754Z",
@@ -738,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "dd30b357",
+   "id": "059028b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:10:12.110367Z",
@@ -769,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "14ef2489",
+   "id": "38582408",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:57:18.836583Z",
@@ -814,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "64462786",
+   "id": "0705bb4d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:57:23.406601Z",
@@ -859,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b64173fd",
+   "id": "d4827086",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:25:26.839271Z",
@@ -904,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "0fbbaaab",
+   "id": "eea87070",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:29:30.200316Z",
@@ -949,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0d4f7255",
+   "id": "8f9209d2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:30:09.999096Z",
@@ -994,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "198dbaf8",
+   "id": "b4a47d72",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:15:48.003025Z",
@@ -1039,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8b7796a7",
+   "id": "90929e82",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:17:52.976633Z",
@@ -1084,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e89965f6",
+   "id": "91122c20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:22:43.656440Z",
@@ -1128,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ad7b04db",
+   "id": "0a2b50b3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:22:35.619345Z",
@@ -1172,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6c101484",
+   "id": "16d20d67",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:22:10.562500Z",
@@ -1216,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c572091b",
+   "id": "77d8ba66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-06T20:22:18.373007Z",
@@ -1259,7 +1258,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a1666b81",
+   "id": "4df60261",
    "metadata": {},
    "source": [
     "Наибольшее количество игроков используют в начале нового матча и в окончании матча Magnum44,\n",
@@ -1278,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a2c23f6",
+   "id": "c89123eb",
    "metadata": {},
    "source": [
     "### Критерии лояльности\n",
@@ -1291,12 +1290,137 @@
   },
   {
    "cell_type": "raw",
-   "id": "8bb344b2",
+   "id": "96e7ef8d",
    "metadata": {},
    "source": [
     "Для удержания пользователей может быть эффективно разделить игроков по группам лояльности исходя из длительности периода ежедневного пребывания в игре. \n",
     "Например, за 30 дней ежедневного посещения игрок получает achieve - бронзовую защиту, за 60 дней - серебряную, за 90 - золотую. \n",
     "Для игрока, совершившего покупку \"unlock_with_bucks\", может быть засчитан один день пребывания за два, либо накопленные дни умножаются на 2."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "dcf0b650",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-07T15:33:11.096584Z",
+     "start_time": "2021-06-07T15:33:11.018429Z"
+    }
+   },
+   "source": [
+    "С помощью рекурсивного запроса написать расчет количества непрерывного порядка чисел месяца для каждого user_id\n",
+    "(day_to_bonus)\n",
+    "При наличии покупок умножать полученное число дней на 2 в степени N (N - количество покупок) (day_to_bonus_correct)\n",
+    "\n",
+    "Case (when day_to_bonus = 1 then day_to_bonus, when day_to_bonus >1 then day_to_bonus_correct из предыдущего дня)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3574e4b9",
+   "metadata": {},
+   "source": [
+    "### АВ-тест"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "1d7a1adc",
+   "metadata": {},
+   "source": [
+    "В нашей игре проводился АБ-тест. Каждый игрок был распределен в одну из групп (контрольная или тестовая) и получил\n",
+    "идентификатор 0 или 1 соответственно. В тесте мы хотели проверить гипотезу о том, что изменения в тестовой группе\n",
+    "положительно повлияют на денежные показатели: ARPU и конверсию. Проведите анализ АБ-теста: подтвердилась ли наша\n",
+    "гипотеза, какая группа победила в тесте?"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "3d9bcc75",
+   "metadata": {},
+   "source": [
+    "Рассчитать метрики ARPU и Conversia для каждой группы.\n",
+    "Учитывать оплаты только с даты включения игрока в группу (where data_event>=joined_dt) (не повлияло на результат)\n",
+    "\n",
+    "ab_group — номер группы АБ-теста, в которую попал игрок (0— контрольная, 1 — тестовая)\n",
+    "\n",
+    "Из-за перегруза памяти сравнение групп проведено в 3 итерации:\n",
+    "1. временная таблица с перечнем покупок и ценами\n",
+    "2. добавление в test.events_data - покупок, стоимости, количества покупок, разделение по группам 1 и 0\n",
+    "3. сравнение метрик в группах"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52ba861",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2021-06-07T15:53:51.723Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# группировка параметров для контрольной и тестовой группы\n",
+    "\n",
+    "control_group = pd.read_sql(\n",
+    "    \"\"\"CREATE TEMP TABLE collection_pay AS     --временная таблица с перечнем покупок и ценами\n",
+    "  with \n",
+    "collection as (\n",
+    "        select event_id, param_key, param_value\n",
+    "        from\n",
+    "        (select event_id, param_key, \n",
+    "        coalesce (param_value_string, param_value_int, param_value_float, param_value_double) param_value\n",
+    "                            from (select event_id, param_key, \n",
+    "                                                 NULLIF (param_value_string,'') param_value_string, \n",
+    "                                                 NULLIF (param_value_int,'') param_value_int, \n",
+    "                                                 NULLIF (param_value_float,'') param_value_float, \n",
+    "                                                 NULLIF (param_value_double,'') param_value_double \n",
+    "                                 from  test.parameters_data) n\n",
+    "        where param_key is not null) m)\n",
+    "    select \n",
+    "        distinct c1.event_id,\n",
+    "        c1.param_key,\n",
+    "        c2.param_value as product_id, \n",
+    "        price_game.price\n",
+    "            from collection c1 \n",
+    "                    left join collection c2 on c1.event_id = c2.event_id and c2.param_key = 'product_id'\n",
+    "                    left join test.prices_data price_game on c2.param_value = price_game.product_id\n",
+    "where c1.param_key = 'product_id';\n",
+    "\n",
+    "--добавление в test.events_data - покупок, стоимости, количества покупок, разделение по группам 1 и 0\n",
+    "\n",
+    "with \n",
+    "ab_test as (select user_id, ab_group, date(to_timestamp(floor(joined/1000000))) joined_dt \n",
+    "from test.ab_data order by joined),\n",
+    "users as (select m.max_event_id, date(m.data_event) data_event, m.user_id, m.event_name, ab_test.ab_group from \n",
+    "        (select *, date(to_timestamp(floor(event_timestamp/1000000))) data_event , max (event_id) max_event_id \n",
+    "        from test.events_data group by 1,2,3,4) m \n",
+    "        left join ab_test on m.user_id = ab_test.user_id and m.data_event>= ab_test.joined_dt)\n",
+    "    select \n",
+    "         users.max_event_id,\n",
+    "         users.data_event, \n",
+    "         users.user_id,\n",
+    "         users.event_name, \n",
+    "         users.ab_group,\n",
+    "         collection_pay.product_id,\n",
+    "         collection_pay.price,\n",
+    "         count(collection_pay.product_id) over (partition by users.data_event, users.user_id) count_purchse \n",
+    "         from users\n",
+    "            left join collection_pay on collection_pay.event_id = users.max_event_id;\n",
+    "            \n",
+    "-- сравнение метрик в группах\n",
+    "\n",
+    "select ab_group,\n",
+    "        count(distinct user_id) all_users_in_group,\n",
+    "        count(product_id) count_pay_users_in_group,\n",
+    "        sum(price) revenue,\n",
+    "        sum(count_purchse) count_purchse,\n",
+    "        sum(price)/count(product_id) ARPPU,\n",
+    "        (cast(sum(count_purchse) as float) / cast (count(distinct user_id) as float) *100) conversion_rate\n",
+    "from grooping group by 1;\n",
+    "\"\"\",\n",
+    "    conn)"
    ]
   }
  ],
