--- a/mail.ru/Elbrus.ipynb
+++ b/mail.ru/Elbrus.ipynb
@@ -287,14 +287,14 @@
   },
   {
    "cell_type": "raw",
-   "id": "8a420f73",
+   "id": "c0fbeacc",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9989d5",
+   "id": "dd278921",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T19:26:17.665402Z",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "5ea28bd9",
+   "id": "552c6b0f",
    "metadata": {},
    "source": [
     "отбор факторов и выбор уравнения регрессии."
@@ -378,12 +378,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "9fedecd7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-09T20:35:18.820065Z",
-     "start_time": "2021-06-09T20:35:18.812424Z"
+     "end_time": "2021-06-09T20:43:30.055076Z",
+     "start_time": "2021-06-09T20:43:30.047763Z"
     }
    },
    "outputs": [
@@ -396,16 +396,12 @@
       "Регистрации_organic - 0%\n",
       "Переходы_paid - 0%\n",
       "Регистрации_paid - 0%\n",
-      "T - 0%\n",
       "RRR - 0%\n",
-      "sss - 0%\n",
       "Orders_all - 0%\n",
       "Orders_with_coupon - 0%\n",
       "Num_of_OOH - 0%\n",
-      "OTS - 0%\n",
       "Reach - 0%\n",
-      "Google Trends  - 3%\n",
-      "Яндекс Вордстат - 13%\n",
+      "Google_Trends_ - 0%\n",
       "TVR - 0%\n"
      ]
     }
@@ -488,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "98d33cb7",
+   "id": "3604d9f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.411683Z",
@@ -504,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3456dc05",
+   "id": "e65c3128",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.423179Z",
@@ -520,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e090794a",
+   "id": "087ce3d6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.431618Z",
@@ -534,7 +530,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "3939620e",
+   "id": "6d028f66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:34:56.538846Z",
@@ -550,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "90cf613e",
+   "id": "06b0dd35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.648797Z",
@@ -587,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b56c6c91",
+   "id": "3d815444",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:39:42.614553Z",
@@ -632,12 +628,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "36d742e4",
+   "execution_count": 26,
+   "id": "35ec6ca2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-09T20:41:55.809449Z",
-     "start_time": "2021-06-09T20:41:55.747687Z"
+     "end_time": "2021-06-09T20:48:35.272671Z",
+     "start_time": "2021-06-09T20:48:35.237904Z"
     }
    },
    "outputs": [
@@ -653,15 +649,15 @@
       "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'city_num'",
+      "\u001b[0;31mKeyError\u001b[0m: 'dup_number'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3825\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3826\u001b[0;31m             \u001b[0mloc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3827\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3082\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'city_num'",
+      "\u001b[0;31mKeyError\u001b[0m: 'dup_number'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-593bd238a364>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_for_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'city_num'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_for_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'City'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-26-235cc8ae56d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_for_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dup_number'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_for_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'City'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3161\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3162\u001b[0m             \u001b[0;31m# set column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3163\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3165\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mslice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3241\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_valid_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3242\u001b[0m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3243\u001b[0;31m         \u001b[0mNDFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3244\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3245\u001b[0m         \u001b[0;31m# check if we are modifying a copy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3827\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3828\u001b[0m             \u001b[0;31m# This item wasn't present, just insert at end\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3829\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_mgr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3830\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3831\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -673,7 +669,7 @@
     }
    ],
    "source": [
-    "data_for_model['city_num'] = data_for_model.groupby(['City']).transform(np.size)"
+    "data_for_model['dup_number'] = data_for_model.groupby(['City']).transform(np.size)"
    ]
   },
   {
@@ -893,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a4c9c15",
+   "id": "46637d97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.757518Z",
@@ -991,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bc37686",
+   "id": "80d2edc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -999,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "016b52cb",
+   "id": "675774ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.761344Z",
@@ -1016,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f94d60",
+   "id": "74f03360",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1024,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12fc2341",
+   "id": "4002cd11",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.762480Z",
@@ -1049,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "907c6e0f",
+   "id": "7c983d66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-09T20:35:19.763245Z",
